--- a/rules/alb.yaml
+++ b/rules/alb.yaml
@@ -26,7 +26,7 @@ spec:
             summary: ALB 5xx Error ratio is greater than 20%
             description: ALB TargetGroup 5xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://docs.aws.amazon.com/elasticloadbalancing/latest/application/load-balancer-troubleshooting.html
-          expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_sum{} [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_sum{} [30m]) + rate(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_sum{} [30m])) * 100)  > 20
+          expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_sum{}[15m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget2XXCount_LoadBalancer_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget3XXCount_LoadBalancer_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_sum{}[15m]))  * 100) > 20
           for: 15m
           labels:
             rule_source: opswatch-prometheus-rules
@@ -36,7 +36,7 @@ spec:
             summary: ALB 4xx Error ratio is greater than 30%
             description: ALB TargetGroup 4xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://docs.aws.amazon.com/elasticloadbalancing/latest/application/load-balancer-troubleshooting.html
-          expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_sum{} [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_sum{} [30m]) + rate(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_sum{} [30m])) * 100)  > 30
+          expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_sum{}[15m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget2XXCount_LoadBalancer_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget3XXCount_LoadBalancer_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_sum{}[15m]))  * 100)  > 30
           for: 15m
           labels:
             rule_source: opswatch-prometheus-rules
@@ -76,7 +76,7 @@ spec:
             summary: ALB TargetGroup 5xx Error ratio is greater than 20%
             description: ALB TargetGroup 5xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer }} & TargetGroup {{ $labels.dimension_TargetGroup }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://aws.amazon.com/de/premiumsupport/knowledge-center/elb-fix-failing-health-checks-alb/
-          expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_TargetGroup_sum{} [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_TargetGroup_sum{} [30m]) + rate(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_TargetGroup_sum{} [30m])) * 100)  > 20
+          expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_TargetGroup_sum{}[15m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget2XXCount_LoadBalancer_TargetGroup_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget3XXCount_LoadBalancer_TargetGroup_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_TargetGroup_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_TargetGroup_sum{}[15m])) * 100) > 20
           for: 15m
           labels:
             rule_source: opswatch-prometheus-rules
@@ -86,7 +86,7 @@ spec:
             summary: ALB TargetGroup 4xx Error ratio is greater than 30%
             description: ALB TargetGroup 4xx error rate is {{$value}}% for LB {{ $labels.dimension_LoadBalancer }} & TargetGroup {{ $labels.dimension_TargetGroup }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://aws.amazon.com/de/premiumsupport/knowledge-center/elb-fix-failing-health-checks-alb/
-          expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_TargetGroup_sum{} [30m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_TargetGroup_sum{} [30m]) + rate(aws_cloudwatch_ApplicationELB_RequestCount_LoadBalancer_TargetGroup_sum{} [30m])) * 100)  > 30
+          expr: round(rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_TargetGroup_sum{}[15m]) / (rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget2XXCount_LoadBalancer_TargetGroup_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget3XXCount_LoadBalancer_TargetGroup_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget4XXCount_LoadBalancer_TargetGroup_sum{}[15m]) + rate(aws_cloudwatch_ApplicationELB_HTTPCodeTarget5XXCount_LoadBalancer_TargetGroup_sum{}[15m])) * 100) > 30
           for: 15m
           labels:
             rule_source: opswatch-prometheus-rules
