--- a/rules/elasticsearch.yaml
+++ b/rules/elasticsearch.yaml
@@ -61,6 +61,16 @@ spec:
           labels:
             rule_source: opswatch-prometheus-rules
             severity: critical
+        - alert: AwsCloudwatchElasticSearchDashboardNotHealthy
+          annotations:
+            summary: ElasticSearch Dashboard is failing
+            description: ElasticSearch Dashboard is failing for domain {{ $labels.dimension_DomainName }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+            runbook_url: https://docs.aws.amazon.com/opensearch-service/latest/developerguide/handling-errors.html
+          expr: aws_cloudwatch_ES_OpenSearchDashboardsHealthyNodes_ClientId_DomainName < 1
+          for: 15m
+          labels:
+            rule_source: opswatch-prometheus-rules
+            severity: critical
         - alert: AwsCloudwatchElasticSearchMasterNotReachable
           annotations:
             summary: ElasticSearch Cluster master node is not reachable
