--- a/rules/waf.yaml
+++ b/rules/waf.yaml
@@ -19,7 +19,7 @@ spec:
           expr: round(rate(aws_cloudwatch_WAF_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAF_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAF_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20
           for: 30m
           labels:
-            severity: warning
+            severity: info
         - alert: AwsCloudwatchWafV1BlockRate50Percent
           annotations:
             summary: WAF block ratio is greater than 50%
@@ -28,7 +28,7 @@ spec:
           expr: round(rate(aws_cloudwatch_WAF_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAF_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAF_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50
           for: 30m
           labels:
-            severity: warning
+            severity: critical
         - alert: AwsCloudwatchWafV2BlockRateGlobal20Percent
           annotations:
             summary: WAF block ratio is greater than 20%
@@ -37,7 +37,7 @@ spec:
           expr: round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20
           for: 30m
           labels:
-            severity: warning
+            severity: info
         - alert: AwsCloudwatchWafV2BlockRateGlobal50Percent
           annotations:
             summary: WAF block ratio is greater than 50%
@@ -46,7 +46,7 @@ spec:
           expr: round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50
           for: 30m
           labels:
-            severity: warning
+            severity: critical
         - alert: AwsCloudwatchWafV2BlockRateRegional20Percent
           annotations:
             summary: WAF block ratio is greater than 20%
@@ -55,7 +55,7 @@ spec:
           expr: round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20
           for: 30m
           labels:
-            severity: warning
+            severity: info
         - alert: AwsCloudwatchWafV2BlockRateRegional50Percent
           annotations:
             summary: WAF block ratio is greater than 50%
@@ -64,7 +64,7 @@ spec:
           expr: round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50
           for: 30m
           labels:
-            severity: warning
+            severity: critical
         - alert: AwsCloudwatchWafV2BlockedAttacks
           annotations:
             summary: WAF blocked attacks
