--- a/rules/waf.yaml
+++ b/rules/waf.yaml
@@ -28,7 +28,7 @@ spec:
           expr: round(rate(aws_cloudwatch_WAF_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAF_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAF_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50
           for: 30m
           labels:
-            severity: critical
+            severity: warning
         - alert: AwsCloudwatchWafV2BlockRateGlobal20Percent
           annotations:
             summary: WAF block ratio is greater than 20%
@@ -46,7 +46,7 @@ spec:
           expr: round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50
           for: 30m
           labels:
-            severity: critical
+            severity: warning
         - alert: AwsCloudwatchWafV2BlockRateRegional20Percent
           annotations:
             summary: WAF block ratio is greater than 20%
@@ -64,7 +64,7 @@ spec:
           expr: round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50
           for: 30m
           labels:
-            severity: critical
+            severity: warning
         - alert: AwsCloudwatchWafV2BlockedAttacks
           annotations:
             summary: WAF blocked attacks
