feat: increase severity level for quota alert to medium ticket
Signed-off-by: Patrick Robinson <patrick.robinson@bertelsmann.de>

--- a/rules/trustedadvisor.yaml
+++ b/rules/trustedadvisor.yaml
@@ -37,4 +37,4 @@ spec:
           for: 15m
           labels:
             rule_source: opswatch-prometheus-rules
-            severity: info
+            severity: warning
