--- a/rules/subnet.yaml
+++ b/rules/subnet.yaml
@@ -16,7 +16,7 @@ spec:
             summary: Number of available ip addresses in a subnet is less than 10%
             description: Number of available ip addresses is {{$value}}% for subnet {{ $labels.subnet_id}} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://docs.aws.amazon.com/vpc/latest/userguide/amazon-vpc-limits.html
-          expr: round(aws_apidescribe_Subnet_AvailableIpAddressCount / aws_apidescribe_NATGateway_TotalIpAddressCount * 100) < 10
+          expr: round(aws_apidescribe_AvailableIpAddressCount / aws_apidescribe_TotalIpAddressCount * 100) < 10
           for: 15m
           labels:
             rule_source: opswatch-prometheus-rules
@@ -24,9 +24,9 @@ spec:
         - alert: AwsSubnetsAvailableIpAddressWarningTotal
           annotations:
             summary: Number of available ip addresses in a subnet is less than 10
-            description: Number of available ip addresses is {{$value}}% for subnet {{ $labels.subnet_id}} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
+            description: Number of available ip addresses is {{$value}} for subnet {{ $labels.subnet_id}} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://docs.aws.amazon.com/vpc/latest/userguide/amazon-vpc-limits.html
-          expr: aws_apidescribe_Subnet_AvailableIpAddressCount < 10
+          expr: aws_apidescribe_AvailableIpAddressCount < 10
           for: 15m
           labels:
             rule_source: opswatch-prometheus-rules
