--- a/rules/cloudfoundation.yaml
+++ b/rules/cloudfoundation.yaml
@@ -11,11 +11,17 @@ spec:
   groups:
     - name: cloudfoundation.rules
       rules:
+        - record: aws_cloudwatch_CloudFoundation_GuardDutyStatus_Active_Account
+          expr: (max_over_time(aws_cloudwatch_CloudFoundation_GuardDutyStatus_Account_OrganizationId_Status[4h]) and on(dimension_Account) (max_over_time(aws_cloudwatch_CloudFoundation_OrganizationMemberStatus_Account_OrganizationId_Status{dimension_Status="ACTIVE"}[4h]) >= 1))
+        - record: aws_cloudwatch_CloudFoundation_CloudTrailStatus_Active_Account
+          expr: (max_over_time(aws_cloudwatch_CloudFoundation_CloudTrailStatus_Account_OrganizationId[4h])) and on(dimension_Account) (max_over_time(aws_cloudwatch_CloudFoundation_OrganizationMemberStatus_Account_OrganizationId_Status{dimension_Status="ACTIVE"}[4h]) >= 1)
+        - record: CloudFoundationSLA
+          expr: count by (dimension_OrganizationId) (aws_cloudwatch_CloudFoundation_GuardDutyStatus_Active_Account{dimension_Status!="Enabled"} or (aws_cloudwatch_CloudFoundation_CloudTrailStatus_Active_Account < 1))
         - alert: CloudFoundationGuardDutyStatusNotEnabled
           annotations:
             summary: Status of GuardDuty is not enabled
             description: Status GuardDuty in account {{ $labels.dimension_Account }} and organization {{ $labels.dimension_OrganizationId }} is {{ $labels.dimension_Status }}
-          expr: (max_over_time(aws_cloudwatch_CloudFoundation_OrganizationMemberStatus_Account_OrganizationId_Status{dimension_Status="ACTIVE"}[4h]) >= 1) and on(dimension_Account) (max_over_time(aws_cloudwatch_CloudFoundation_GuardDutyStatus_Account_OrganizationId_Status{dimension_Status!="Enabled"}[4h]) >= 1)
+          expr: count(aws_cloudwatch_CloudFoundation_GuardDutyStatus_Active_Account{dimension_Status!="Enabled"}) > 0
           for: 15m
           labels:
             rule_source: opswatch-prometheus-rules
@@ -25,8 +31,7 @@ spec:
           annotations:
             summary: CloudTrail is not lgging
             description: CloudTrail in account {{ $labels.dimension_Account }} and organization {{ $labels.dimension_OrganizationId }} is not logging
-          expr: (max_over_time(aws_cloudwatch_CloudFoundation_CloudTrailStatus_Account_OrganizationId[4h]) < 1) and on(dimension_Account) (max_over_time(aws_cloudwatch_CloudFoundation_OrganizationMemberStatus_Account_OrganizationId_Status{dimension_Status="ACTIVE"}[4h]) >= 1)
-          for: 15m
+          expr: aws_cloudwatch_CloudFoundation_CloudTrailStatus_Active_Account < 1
           labels:
             rule_source: opswatch-prometheus-rules
             severity: warning
