--- a/rules/waf.yaml
+++ b/rules/waf.yaml
@@ -11,30 +11,12 @@ spec:
   groups:
     - name: waf.rules
       rules:
-        - alert: AwsCloudwatchWafV1BlockRate20Percent
-          annotations:
-            summary: WAF block ratio is greater than 20%
-            description: WAF block ratio is {{$value}}% for WAF ACL {{ $labels.dimension_WebACL }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
-            runbook_url: https://repost.aws/knowledge-center/waf-mitigate-ddos-attacks
-          expr: round(rate(aws_cloudwatch_WAF_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAF_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAF_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20
-          for: 30m
-          labels:
-            severity: info
-        - alert: AwsCloudwatchWafV1BlockRate50Percent
-          annotations:
-            summary: WAF block ratio is greater than 50%
-            description: WAF block ratio is {{$value}}% for WAF ACL {{ $labels.dimension_WebACL }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
-            runbook_url: https://repost.aws/knowledge-center/waf-mitigate-ddos-attacks
-          expr: round(rate(aws_cloudwatch_WAF_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAF_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAF_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50
-          for: 30m
-          labels:
-            severity: warning
         - alert: AwsCloudwatchWafV2BlockRateGlobal20Percent
           annotations:
             summary: WAF block ratio is greater than 20%
             description: WAF block ratio is {{$value}}% for WAF ACL {{ $labels.dimension_WebACL }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://repost.aws/knowledge-center/waf-mitigate-ddos-attacks
-          expr: round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20
+          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20) and (rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 10)
           for: 30m
           labels:
             severity: info
@@ -43,7 +25,7 @@ spec:
             summary: WAF block ratio is greater than 50%
             description: WAF block ratio is {{$value}}% for WAF ACL {{ $labels.dimension_WebACL }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://repost.aws/knowledge-center/waf-mitigate-ddos-attacks
-          expr: round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50
+          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50) and (rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 10)
           for: 30m
           labels:
             severity: warning
@@ -52,7 +34,7 @@ spec:
             summary: WAF block ratio is greater than 20%
             description: WAF block ratio is {{$value}}% for WAF ACL {{ $labels.dimension_WebACL }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://repost.aws/knowledge-center/waf-mitigate-ddos-attacks
-          expr: round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20
+          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20) and (rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 10)
           for: 30m
           labels:
             severity: info
@@ -61,7 +43,7 @@ spec:
             summary: WAF block ratio is greater than 50%
             description: WAF block ratio is {{$value}}% for WAF ACL {{ $labels.dimension_WebACL }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://repost.aws/knowledge-center/waf-mitigate-ddos-attacks
-          expr: round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50
+          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50) and (rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 10)
           for: 30m
           labels:
             severity: warning
