--- a/rules/waf.yaml
+++ b/rules/waf.yaml
@@ -13,37 +13,37 @@ spec:
       rules:
         - alert: AwsCloudwatchWafV2BlockRateGlobal20Percent
           annotations:
-            summary: WAF block ratio is greater than 20%
+            summary: WAF block ratio is greater than 20% and more than 50 request in 15 minutes
             description: WAF block ratio is {{$value}}% for WAF ACL {{ $labels.dimension_WebACL }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://repost.aws/knowledge-center/waf-mitigate-ddos-attacks
-          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20) and (rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 10)
+          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20) and (increase(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + increase(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + increase(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 50)
           for: 30m
           labels:
             severity: info
         - alert: AwsCloudwatchWafV2BlockRateGlobal50Percent
           annotations:
-            summary: WAF block ratio is greater than 50%
+            summary: WAF block ratio is greater than 50% and more than 50 request in 15 minutes
             description: WAF block ratio is {{$value}}% for WAF ACL {{ $labels.dimension_WebACL }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://repost.aws/knowledge-center/waf-mitigate-ddos-attacks
-          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50) and (rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 10)
+          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50) and (increase(aws_cloudwatch_WAFV2_AllowedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + increase(aws_cloudwatch_WAFV2_CountedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + increase(aws_cloudwatch_WAFV2_BlockedRequests_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 50)
           for: 30m
           labels:
             severity: warning
         - alert: AwsCloudwatchWafV2BlockRateRegional20Percent
           annotations:
-            summary: WAF block ratio is greater than 20%
+            summary: WAF block ratio is greater than 20% and more than 50 request in 15 minutes
             description: WAF block ratio is {{$value}}% for WAF ACL {{ $labels.dimension_WebACL }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://repost.aws/knowledge-center/waf-mitigate-ddos-attacks
-          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20) and (rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 10)
+          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 20) and (increase(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + increase(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + increase(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 50)
           for: 30m
           labels:
             severity: info
         - alert: AwsCloudwatchWafV2BlockRateRegional50Percent
           annotations:
-            summary: WAF block ratio is greater than 50%
+            summary: WAF block ratio is greater than 50% and more than 50 request in 15 minutes
             description: WAF block ratio is {{$value}}% for WAF ACL {{ $labels.dimension_WebACL }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
             runbook_url: https://repost.aws/knowledge-center/waf-mitigate-ddos-attacks
-          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50) and (rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 10)
+          expr: (round(rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) / (rate(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + rate(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m])) * 100) > 50) and (increase(aws_cloudwatch_WAFV2_AllowedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + increase(aws_cloudwatch_WAFV2_CountedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) + increase(aws_cloudwatch_WAFV2_BlockedRequests_Region_Rule_WebACL_sum{dimension_Rule="ALL"}[15m]) > 50)
           for: 30m
           labels:
             severity: warning
