feat: fix meta files
Signed-off-by: Patrick Robinson <patrick.robinson@bertelsmann.de>

--- a/.github/workflows/check-rules.yaml
+++ b/.github/workflows/check-rules.yaml
@@ -24,6 +24,7 @@ jobs:
         yamllint_file_or_dir: rules/
         yamllint_strict: false
         yamllint_comment: true
+        yamllint_config_filepath: .yamllint
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   check-rules:
